---
title: Category
---
classDiagram
    direction LR

    class Category {
        -Group group
        -Collection~Product~ products
        -Collection~Task~ tasks
        -string code
        -string description
        +getGroup() Group
        +set(Group)
        +getCode() string
        +setCode(string)
        +getDescription() string
        +setDescription(string)
        +addProduct(Product)
        +removeProduct(Product)
        +getProducts() Collection~Product~
        +addTask(Task)
        +removeTask(Task)
        +getTasks() Collection~Task~
    }

    class AbstractEntity {
        <<Abstract>>
    }
    class EntityInterface {
        <<Interface>>
    }

    class TimestampableInterface {
        <<Interface>>
    }

    EntityInterface <|.. AbstractEntity
    AbstractEntity <|-- Category
    Group "0" --> "*" Category
    Category "0" --> "*" Product
    Category "0" --> "*" Task
    TimestampableInterface <|-- Category

    click EntityInterface call nodeCallback()
    click AbstractEntity call nodeCallback()
    click Group call nodeCallback()
    click Product call nodeCallback()
    click Task call nodeCallback()
    click TimestampableInterface call nodeCallback()
